--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react-dom": "^18.0.6",
     "@types/react-redux": "^7.1.33",
     "@types/uuid": "^8.3.4",
+    "axios": "^1.6.7",
     "gh-pages": "^6.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
