--- a/package.json
+++ b/package.json
@@ -71,5 +71,10 @@
     "start-server-and-test": "^2.0.3",
     "storybook": "^7.6.10",
     "webpack": "5.89.0"
+  },
+  "jest": {
+    "transformIgnorePatterns": [
+      "/node_modules/(?!(axios|react-day-picker)/)"
+    ]
   }
 }
