--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "@types/react-redux": "^7.1.33",
     "@types/uuid": "^8.3.4",
     "axios": "^1.6.7",
+    "formik": "^2.4.5",
     "gh-pages": "^6.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.0.4",
+    "react-router-dom": "^6.22.1",
     "react-scripts": "5.0.1",
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0",
