--- a/package.json
+++ b/package.json
@@ -1,84 +1,85 @@
 {
-  "name": "it-incubator-todolist-ts",
-  "version": "0.1.0",
-  "private": true,
-  "homepage": "https://Sun-ny11.github.io/second-todolist",
-  "dependencies": {
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
-    "@mui/icons-material": "^5.15.1",
-    "@mui/material": "^5.15.1",
-    "@reduxjs/toolkit": "^2.2.1",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^14.4.3",
-    "@types/jest": "^29.2.0",
-    "@types/node": "^18.11.0",
-    "@types/react": "^18.0.21",
-    "@types/react-dom": "^18.0.6",
-    "@types/react-redux": "^7.1.33",
-    "@types/uuid": "^8.3.4",
-    "axios": "^1.6.7",
-    "formik": "^2.4.5",
-    "gh-pages": "^6.1.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-redux": "^9.0.4",
-    "react-router-dom": "^6.22.1",
-    "react-scripts": "5.0.1",
-    "redux": "^5.0.1",
-    "redux-thunk": "^3.1.0",
-    "styled-components": "^5.3.6",
-    "typescript": "~4.8.4",
-    "uuid": "^9.0.0"
-  },
-  "scripts": {
-    "predeploy": "yarn run build",
-    "deploy": "gh-pages -d build",
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "storybook": "storybook dev -p 9009",
-    "build-storybook": "storybook build",
-    "jest:integration": "jest -c integration/jest.config.js",
-    "test:integration": "start-server-and-test storybook http-get://localhost:9009 jest:integration",
-    "update-snapshot": "jest -c integration/jest.config.js --updateSnapshot"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "@storybook/addon-essentials": "^7.6.10",
-    "@storybook/addon-interactions": "^7.6.10",
-    "@storybook/addon-links": "^7.6.10",
-    "@storybook/addon-onboarding": "1.0.11",
-    "@storybook/blocks": "^7.6.10",
-    "@storybook/preset-create-react-app": "^7.6.10",
-    "@storybook/react": "^7.6.10",
-    "@storybook/react-webpack5": "^7.6.10",
-    "@storybook/test": "^7.6.10",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
-    "jest-image-snapshot": "^6.4.0",
-    "jest-puppeteer": "^9.0.2",
-    "prop-types": "15.8.1",
-    "puppeteer": "^21.7.0",
-    "start-server-and-test": "^2.0.3",
-    "storybook": "^7.6.10",
-    "webpack": "5.89.0"
-  },
-  "jest": {
-    "transformIgnorePatterns": [
-      "/node_modules/(?!(axios|react-day-picker)/)"
-    ]
-  }
+   "name": "it-incubator-todolist-ts",
+   "version": "0.1.0",
+   "private": true,
+   "homepage": "https://Sun-ny11.github.io/second-todolist",
+   "dependencies": {
+      "@emotion/react": "^11.11.1",
+      "@emotion/styled": "^11.11.0",
+      "@mui/icons-material": "^5.15.1",
+      "@mui/material": "^5.15.1",
+      "@reduxjs/toolkit": "^2.2.1",
+      "@testing-library/jest-dom": "^5.16.5",
+      "@testing-library/react": "^13.4.0",
+      "@testing-library/user-event": "^14.4.3",
+      "@types/jest": "^29.2.0",
+      "@types/node": "^18.11.0",
+      "@types/react": "^18.0.21",
+      "@types/react-dom": "^18.0.6",
+      "@types/react-redux": "^7.1.33",
+      "@types/uuid": "^8.3.4",
+      "axios": "^1.6.7",
+      "formik": "^2.4.5",
+      "gh-pages": "^6.1.1",
+      "react": "^18.2.0",
+      "react-dom": "^18.2.0",
+      "react-redux": "^9.0.4",
+      "react-router-dom": "^6.22.1",
+      "react-scripts": "5.0.1",
+      "redux": "^5.0.1",
+      "redux-thunk": "^3.1.0",
+      "styled-components": "^5.3.6",
+      "typescript": "~4.8.4",
+      "uuid": "^9.0.0"
+   },
+   "scripts": {
+      "predeploy": "yarn run build",
+      "deploy": "gh-pages -d build",
+      "start": "react-scripts start",
+      "build": "react-scripts build",
+      "test": "react-scripts test",
+      "storybook": "storybook dev -p 9009",
+      "build-storybook": "storybook build",
+      "jest:integration": "jest -c integration/jest.config.js",
+      "test:integration": "start-server-and-test storybook http-get://localhost:9009 jest:integration",
+      "update-snapshot": "jest -c integration/jest.config.js --updateSnapshot"
+   },
+   "browserslist": {
+      "production": [
+         ">0.2%",
+         "not dead",
+         "not op_mini all"
+      ],
+      "development": [
+         "last 1 chrome version",
+         "last 1 firefox version",
+         "last 1 safari version"
+      ]
+   },
+   "devDependencies": {
+      "@storybook/addon-essentials": "^7.6.10",
+      "@storybook/addon-interactions": "^7.6.10",
+      "@storybook/addon-links": "^7.6.10",
+      "@storybook/addon-onboarding": "1.0.11",
+      "@storybook/blocks": "^7.6.10",
+      "@storybook/preset-create-react-app": "^7.6.10",
+      "@storybook/react": "^7.6.10",
+      "@storybook/react-webpack5": "^7.6.10",
+      "@storybook/test": "^7.6.10",
+      "jest": "^29.7.0",
+      "jest-environment-jsdom": "^29.7.0",
+      "jest-image-snapshot": "^6.4.0",
+      "jest-puppeteer": "^9.0.2",
+      "prettier": "3.2.5",
+      "prop-types": "15.8.1",
+      "puppeteer": "^21.7.0",
+      "start-server-and-test": "^2.0.3",
+      "storybook": "^7.6.10",
+      "webpack": "5.89.0"
+   },
+   "jest": {
+      "transformIgnorePatterns": [
+         "/node_modules/(?!(axios|react-day-picker)/)"
+      ]
+   }
 }
