added new theme

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
    "name": "it-incubator-todolist-ts",
    "version": "0.1.0",
    "private": true,
-   "homepage": "https://Sun-ny11.github.io/tasks-planner",
+   "homepage": "https://Sun-ny11.github.io/tasksPlanner",
    "dependencies": {
       "@emotion/react": "^11.11.1",
       "@emotion/styled": "^11.11.0",
